--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Catalog/Views/Shared/_ProductThumbnail.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Catalog/Views/Shared/_ProductThumbnail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SimplCommerce.Module.Catalog.Areas.Catalog.ViewModels.ProductThumbnail
 
-<div class="fz-block text-center add-to-cart">
+<div class="fz-block text-center add-to-cart col">
     <form class="inline">
         <input type="hidden" name="productId" value="@Model.Id" />
         <div class="fz-image" style="background-image: url(@Model.ThumbnailUrl);transform: rotate(0);">
