--- a/src/Modules/SimplCommerce.Module.Catalog/wwwroot/product-detail.css
+++ b/src/Modules/SimplCommerce.Module.Catalog/wwwroot/product-detail.css
@@ -1,65 +1,76 @@
 ﻿.flexslider .slides img {
     height: 500px;
 }
+
 #carousel img {
     width: 120px;
     height: 120px;
 }
 
-.product-detail .product-name {
+/*.product-detail .product-name {
     margin-bottom: 12px;
     border-bottom: 1px solid #dedede;
 }
-.product-ratings li .rating  {
+*/
+.product-ratings li .rating {
     color: #dedddc;
     font-size: 14px;
 }
 
-.product-ratings li .rating-selected{
+.product-ratings li .rating-selected {
     color: #f0c808;
     font-size: 14px;
 }
 
-.product-detail .product-short-desc {
+/*.product-detail .product-short-desc {
     margin: 30px 0;
+}
+*/
+.product-short-desc p {
+    margin-bottom: 0;
 }
 
 .product-price {
-    margin: 20px 0;
+    /*    margin: 20px 0;
     padding: 5px 10px;
     background-color: #FFFFFF;
-    text-align: left;
     border: 2px dashed #E0E0E0;
+    text-align: left;
+*/
     overflow: hidden;
 }
 
-.product-price .product-price-regular{
-    text-decoration: line-through;
-    padding-top: 5px;
-    font-size: 18px;
-}
-
-.product-price .product-price-saving {
-    color: #b12704;
-    clear: left;
-}
-
-.product-price h3 {
-    font-size: 30px;
-    font-weight: 400;
-    color: red;
-    margin: 0;
-    float: left;
-    padding-right: 20px;
-}
+    /*    .product-price .product-price-regular {
+        --bs-text-opacity: 1;
+        color: rgba(var(--bs-danger-rgb),var(--bs-text-opacity)) !important;
+        text-decoration: line-through;
+        padding-top: 5px;
+        font-size: 18px;
+    }
+*/
+    /*    .product-price .product-price-saving {
+        --bs-text-opacity: 1;
+        color: rgba(var(--bs-danger-rgb),var(--bs-text-opacity)) !important;
+        color: #b12704;
+        clear: left;
+    }
+*/
+    .product-price h4 {
+        font-size: 30px;
+        font-weight: 400;
+        /*color: red;*/
+        margin: 0;
+        /*float: left;*/
+        /*padding-right: 20px;*/
+    }
 
 .product-attrs input {
     left: -9999px;
     position: absolute;
 }
 
-.product-attrs label {
-    width: 80px;
+.product-attrs label.color {
+    width: 40px;
     height: 40px;
     float: right;
     display: block;
@@ -69,18 +80,34 @@
     background: #f8f8f8;
     border: 2px solid #dedede;
     font-weight: normal;
+    border-radius: 20px;
+}
+
+.product-attrs label.badge {
+    /*//width: 40px;
+    //height: 40px;*/
+    min-width: 58px;
+    float: right;
+    display: block;
+    color: #000;
+    font-size: 24px;
+    text-align: center;
+    background: #f8f8f8;
+    border: 2px solid #dedede;
+    font-weight: normal;
+    border-radius: 10px;
 }
 
 .product-attrs label {
-	-ms-transition: color 0.3s;
-	-moz-transition: color 0.3s;
-	-webkit-transition: color 0.3s;
+    -ms-transition: color 0.3s;
+    -moz-transition: color 0.3s;
+    -webkit-transition: color 0.3s;
 }
 
-.product-attrs label:hover {
-	cursor: pointer;
-	border: 2px solid #18ba9b;
-}
+    .product-attrs label:hover {
+        cursor: pointer;
+        border: 2px solid #18ba9b;
+    }
 
 .product-attrs input:checked ~ label {
     color: #18ba9b;
@@ -93,12 +120,12 @@
 
 .product-detail .product-quantity {
     float: left;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
 
 .product-detail .quantity-button {
     color: #555;
-    width: 55px;
+    width: 45px;
     height: 45px;
     padding: 5px;
     border: none;
@@ -113,8 +140,8 @@
     background-image: none;
 }
 
- .product-detail .quantity-field {
-    width: 55px;
+.product-detail .quantity-field {
+    width: 45px;
     height: 45px;
     outline: none;
     margin: 0 -4px;
@@ -123,7 +150,7 @@
     border: 1px solid #eee;
 }
 
-.product-detail .btn-add-cart {
+/*.product-detail .btn-add-cart {
     background: #18ba9b;
     font-size: 18px;
     padding: 10px 25px;
@@ -131,7 +158,7 @@
     color: #fff;
     border-radius: 0;
 }
-
+*/
 .product-detail .out-of-stock, .product-detail .product-variation-notavailable {
     font-size: 18px;
 }
@@ -142,11 +169,11 @@
     margin-top: 40px;
 }
 
-.product-detail .add-to-lists li {
-    padding-left: 20px;
-    margin-right: 10px;
-    border-left: 1px solid #dedede;
-}
+    .product-detail .add-to-lists li {
+        padding-left: 20px;
+        margin-right: 10px;
+        border-left: 1px solid #dedede;
+    }
 
 .add-to-lists i {
     color: #8bdccd;
@@ -157,6 +184,25 @@
 .sp-wrap {
     background: none;
     border: none;
+    max-width: none;
+}
+
+.sp-loading {
+    text-align: center;
+    max-width: none;
+    padding: none;
+    border: none;
+    border-radius: none;
+    font-size: none;
+    color: none;
+}
+
+.sp-large {
+    margin-bottom: 0.25rem;
+}
+
+.sp-thumbs a {
+    margin-right: 0.25rem;
 }
 
 .rating-summary {
@@ -164,27 +210,27 @@
     margin-top: 22px;
 }
 
-.rating-summary .rating-average {
-    margin: 10px 0 0;
-    font-size: 35px;
-    color: #f63;
-    font-weight: 700;
-}
+    .rating-summary .rating-average {
+        margin: 10px 0 0;
+        font-size: 35px;
+        color: #f63;
+        font-weight: 700;
+    }
 
 .rating-item {
     margin-bottom: 8px;
     text-align: center;
 }
 
-.rating-item .progress {
-    width: 175px;
-    display: inline-block;
-    height: 17px;
-    vertical-align: middle;
-    margin: 0;
-}
+    .rating-item .progress {
+        width: 175px;
+        display: inline-block;
+        height: 17px;
+        vertical-align: middle;
+        margin: 0;
+    }
 
-    .rating-item .progress-bar{
+    .rating-item .progress-bar {
         height: 100%;
     }
 
@@ -201,9 +247,9 @@
     border-bottom: solid 1px #e2e2e2;
 }
 
-.review-item-list > div:last-child {
-    border-bottom: none;
-}
+    .review-item-list > div:last-child {
+        border-bottom: none;
+    }
 
 .review-item-list .review-title {
     font-weight: 700;
