--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ProductRecentlyViewed/Views/Shared/Components/ProductRecentlyViewed/Default.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ProductRecentlyViewed/Views/Shared/Components/ProductRecentlyViewed/Default.cshtml
@@ -2,13 +2,11 @@
 
 @if (Model.Any())
 {
-<h2 class="page-header">@Localizer["Recently viewed products"]</h2>
-<div class="row product-list">
+<h2 class="mt-2">@Localizer["Recently viewed products"]</h2>
+<div class="row px-3 product-list">
     @foreach (var product in Model)
-    {
-        <div class="col-xs-6 col-md-3">
-            <partial name="/Areas/Catalog/Views/Shared/_ProductThumbnail.cshtml" model="product" />
-        </div>
-    }
+        {
+            <partial name="../../../../../Catalog/Views/Shared/_ProductThumbnail.cshtml" model="product" />
+        }
 </div>
 }
